--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   collection: ^1.18.0
   dart_mappable: ^4.3.1
   form_builder_validators: ^11.0.0
+  firebase_core: ^3.6.0
+  firebase_crashlytics: ^4.1.3
+  firebase_analytics: ^11.3.3
 
 dev_dependencies:
   flutter_test:
